Dark mode fix

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -30,6 +30,15 @@
   html[data-theme="dark"] #sun-svg {
     display: block;
   }
+ 
+  #dark-logo,
+  html[data-theme="dark"] #logo {
+    display: block;
+  }
+  #logo,
+  html[data-theme="dark"] #dark-logo {
+    display: none;
+  }
   body {
     @apply flex min-h-screen flex-col bg-skin-fill font-mono text-skin-base 
     selection:bg-skin-accent selection:bg-opacity-70 selection:text-skin-inverted;
